<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2DFDB"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_register"
        android:textColor="#444444"
        android:textSize="48sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_register"
        android:layout_marginTop="80dp"
        android:hint="@string/text_pick_login"
        android:paddingLeft="48dp"
        android:paddingRight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="artur" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_register_login"
        android:layout_marginTop="12dp"
        android:hint="@string/text_pick_password"
        android:paddingLeft="48dp"
        android:paddingRight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            tools:text="artur" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_register_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_register_password"
        android:layout_marginTop="12dp"
        android:hint="@string/text_repeat_password"
        android:paddingLeft="48dp"
        android:paddingRight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            tools:text="artur" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_register_repeat_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:text="@string/text_create_account"
        >



    </Button>


</RelativeLayout>