<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/image_view_cover"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="4:6"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/text_view_book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#444444"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_book_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_cover"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="book's title" />

    <TextView
        android:id="@+id/text_view_book_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_book_publisher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_cover"
        app:layout_constraintTop_toBottomOf="@id/text_view_book_title"
        tools:text="book's author" />

    <TextView
        android:id="@+id/text_view_book_publisher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_cover"
        app:layout_constraintTop_toBottomOf="@id/text_view_book_author"
        tools:text="@string/detail_publisher" />

    <TextView
        android:id="@+id/text_view_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_added_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_cover"
        app:layout_constraintTop_toBottomOf="@id/text_view_book_publisher"
        tools:text="@string/detail_release_date" />

    <TextView
        android:id="@+id/text_view_added_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_cover"
        app:layout_constraintTop_toBottomOf="@id/text_view_release_date"
        tools:text="@string/detail_added_by" />


</androidx.constraintlayout.widget.ConstraintLayout>